fix overlapping text

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     text-align: center;
 }
 
-.fix {
+.carousel {
     width: 35%;
 }
 
@@ -74,4 +74,8 @@ body {
     color: white;
     background: #7f7ad6;
     background: linear-gradient(90deg, rgba(127, 122, 214, 1) 15%, rgba(150, 101, 214, 1) 50%, rgba(168, 63, 191, 1) 85%);
+}
+
+.fix {
+    width: 90%;
 }
